# personal-analytics

./: .gitignore  CHANGES.md  DEPLOYMENT_LINUX.md  README.md  docker-compose.yml
.github/workflows/: test-backend.yml
backend/: .env.example  Dockerfile  check_db_contents.bash  drop_database.sh  index.html  pyproject.toml  setup_db.sh
backend/deployment/: gunicorn_conf.py  personal-analytics.service.template
backend/deployment/db_scripts/: check_db_contents.bash  drop_database.sh  setup_db.sh
backend/deployment/import_data/: health_data_export.json  import.py
backend/src/personal_analytics_backend/: api.py  database.py  models.py  settings.py
backend/tests/: test_api.py  test_models.py
database/: create_pa_db.sh  drop_pa_db.sh
frontend/: Dockerfile  common.js  form-config.js  form-generator.js  index.html  nginx.conf  settings.docker.js  settings.js  stats.html  styles.css  user-manager.js
